--- a/Hackathon/src/Style.css
+++ b/Hackathon/src/Style.css
@@ -27,3 +27,52 @@ body{
     width: 250px;
     max-width: 250px; 
   }
+  .Sidebar{
+    width: 250px;
+    height: 100vh;
+    background-color: rgb(251, 246, 226);
+    display: inline-block;
+    text-align: center;
+  }
+  .Sidebar .logo {
+    display: inline-block;
+    color: #ffffff; /* Warna teks */
+    font-weight: bold; /* Tebal teks */
+    background-color: rgb(244, 206, 20);
+
+  }
+  .Sidebar .logo1 {
+    display: inline-block;
+    color: #ffffff; 
+    font-weight: lighter; 
+    background-color: rgb(244, 206, 20);
+  }
+  .Sidebar .home a,
+  .Sidebar .chat a,
+  .Sidebar .list a {
+    display: inline-block;
+    padding: 10px 40px; /* Sesuaikan padding dengan kebutuhan */
+    border-radius: 10px; /* Mengatur sudut border */
+    text-align: center;
+    margin: 10px; /* Jarak antar elemen */
+    color: #000000; /* Warna teks */
+    font-weight: bold; /* Tebal teks */
+    background-color: rgb(73, 94, 87);
+    text-decoration: none; /* Menghilangkan garis bawah dari link */
+    min-width: 90px;
+  }
+
+  .Sidebar .home a:hover,
+  .Sidebar .chat a:hover,
+  .Sidebar .list a:hover {
+    box-shadow: 0px 2px 10px #000000; /* Warna latar saat hover */
+    color: white; /* Warna teks saat hover */
+  }
+
+  li{
+    list-style-type: none;
+  }
+
+  ul{
+    padding: 0;
+  }
