--- a/Hackathon/src/Style.css
+++ b/Hackathon/src/Style.css
@@ -22,10 +22,11 @@ body{
     flex-direction: column;
     text-align: left;
     margin: auto;
-    background-color: rgb(207, 7, 7);
+    background-color: rgb(244, 206, 20);
     padding: 30px;
-    width: 250px;
-    max-width: 250px; 
+    width: 300px;
+    max-width: auto; 
+    border-radius: 10px;
   }
   .Sidebar{
     width: 250px;
@@ -51,22 +52,22 @@ body{
   .Sidebar .chat a,
   .Sidebar .list a {
     display: inline-block;
-    padding: 10px 40px; /* Sesuaikan padding dengan kebutuhan */
-    border-radius: 10px; /* Mengatur sudut border */
+    padding: 10px 40px;
+    border-radius: 10px;
     text-align: center;
-    margin: 10px; /* Jarak antar elemen */
-    color: #000000; /* Warna teks */
-    font-weight: bold; /* Tebal teks */
+    margin: 10px;
+    color: #000000;
+    font-weight: bold;
     background-color: rgb(73, 94, 87);
-    text-decoration: none; /* Menghilangkan garis bawah dari link */
+    text-decoration: none;
     min-width: 90px;
   }
 
   .Sidebar .home a:hover,
   .Sidebar .chat a:hover,
   .Sidebar .list a:hover {
-    box-shadow: 0px 2px 10px #000000; /* Warna latar saat hover */
-    color: white; /* Warna teks saat hover */
+    box-shadow: 0px 2px 10px #000000;
+    color: white;
   }
 
   li{
@@ -76,3 +77,93 @@ body{
   ul{
     padding: 0;
   }
+
+  .logout{
+    margin-top: 330px;
+    display: inline-block;
+    padding: 10px 40px;
+    border-radius: 10px;
+    text-align: center;
+    color: #000000;
+    font-weight: bold;
+    background-color: rgb(73, 94, 87);
+
+  }
+
+
+
+
+
+
+
+  
+  
+  .LogInPage h1 {
+    text-align: center;
+    margin-bottom: 1.5rem;
+    color: #333;
+  }
+  
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .form label {
+    margin-bottom: 0.5rem;
+    color: #ffffff;
+  }
+  
+  .form input {
+    padding: 0.75rem;
+    margin-bottom: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 1rem;
+  }
+  
+  .form button {
+    padding: 0.30rem;
+    background-color: rgb(251, 246, 226);
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+    padding: 10px;
+  }
+  
+  .form button:hover {
+    background-color: #a0a0a0;
+  }
+  
+  .google-login {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .google-login label {
+    cursor: pointer;
+    color: #dfdfdf;
+    font-size: 1rem;
+  }
+  
+  .switch-button {
+    margin-top: 1rem;
+    padding: 0.75rem;
+    background-color: #6c757d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+  }
+  
+  .switch-button:hover {
+    background-color: #5a6268;
+  }
+
+
