--- a/Hackathon/src/Style.css
+++ b/Hackathon/src/Style.css
@@ -52,9 +52,7 @@ body{
     font-weight: lighter; 
     padding: 10px 10px 10px 0px;
   }
-  .Sidebar .home a,
-  .Sidebar .chat a,
-  .Sidebar .list a {
+  .Sidebar .home a{
     display: inline-block;
     padding: 10px 40px;
     border-radius: 10px;
@@ -67,9 +65,7 @@ body{
     min-width: 90px;
   }
 
-  .Sidebar .home a:hover,
-  .Sidebar .chat a:hover,
-  .Sidebar .list a:hover {
+  .Sidebar .home a:hover{
     box-shadow: 0px 2px 10px #000000;
     color: white;
   }
@@ -88,14 +84,16 @@ body{
   }
 
   .logout{
-    margin-top: 330px;
     display: inline-block;
     padding: 10px 40px;
     border-radius: 10px;
     text-align: center;
+    margin: 10px;
     color: #000000;
     font-weight: bold;
     background-color: rgb(73, 94, 87);
+    text-decoration: none;
+    min-width: 90px;
 
   }
 
