--- a/Hackathon/src/Style.css
+++ b/Hackathon/src/Style.css
@@ -43,6 +43,7 @@ body{
     display: inline-block;
     color: #ffffff; /* Warna teks */
     font-weight: bold; /* Tebal teks */
+    font-size: 32px;
     padding: 10px 0px 10px 10px;
 
   }
@@ -50,6 +51,7 @@ body{
     display: inline-block;
     color: #ffffff; 
     font-weight: lighter; 
+    font-size: 42px;
     padding: 10px 10px 10px 0px;
   }
   .Sidebar .home a{
