--- a/Hackathon/src/Style.css
+++ b/Hackathon/src/Style.css
@@ -90,31 +90,33 @@ body{
 
   }
 
+  .LogInPage {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+  }
 
-
-
-
-
-
-  
-  
-  .LogInPage h1 {
+  .LogInPage {
     text-align: center;
     margin-bottom: 1.5rem;
     color: #333;
   }
   
-  .form {
+  form {
     display: flex;
     flex-direction: column;
   }
   
-  .form label {
+  form label {
     margin-bottom: 0.5rem;
     color: #ffffff;
   }
   
-  .form input {
+  form input {
     padding: 0.75rem;
     margin-bottom: 1rem;
     border: 1px solid #ddd;
@@ -122,7 +124,7 @@ body{
     font-size: 1rem;
   }
   
-  .form button {
+  form button {
     padding: 0.30rem;
     background-color: rgb(251, 246, 226);
     color: rgb(0, 0, 0);
@@ -134,23 +136,23 @@ body{
     padding: 10px;
   }
   
-  .form button:hover {
+  form button:hover {
     background-color: #a0a0a0;
   }
   
-  .google-login {
+  google-login {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   
-  .google-login label {
+  google-login label {
     cursor: pointer;
     color: #dfdfdf;
     font-size: 1rem;
   }
   
-  .switch-button {
+  switch-button {
     margin-top: 1rem;
     padding: 0.75rem;
     background-color: #6c757d;
@@ -162,8 +164,16 @@ body{
     transition: background-color 0.3s ease;
   }
   
-  .switch-button:hover {
+  switch-button:hover {
     background-color: #5a6268;
   }
 
 
+
+
+
+
+
+  
+  
+  
