--- a/Hackathon/src/Style.css
+++ b/Hackathon/src/Style.css
@@ -124,6 +124,8 @@ body{
     align-items: center;
     height: 100vh;
     width: 100vw;
+    animation-name: SlideFromLeft;
+    animation-duration: 1.2s;
   }
 
   .logout a:hover{
@@ -134,7 +136,6 @@ body{
     line-height: 50px;
   }
 
-
   .LogInPage {
     text-align: center;
     margin-bottom: 1.5rem;
@@ -144,9 +145,9 @@ body{
   form {
     display: flex;
     flex-direction: column;
- 
-  box-shadow: 5px 5px #000000;
-
+    box-shadow: 5px 5px #000000;
+    animation-name: SlideFromRight;
+    animation-duration: 1s;
   }
   
   form label {
@@ -195,6 +196,14 @@ body{
   justify-content: space-between;
 }
 
+.listy{
+  background-color: rgb(244, 206, 20);
+  border-radius: 20px;
+  margin: 10px;
+  padding: 5px 10px;
+  width: 500px;
+}
+
 .databox{
   background-color: rgb(244, 206, 20);
   padding: 25px;
@@ -204,6 +213,36 @@ body{
 
 .databox p{
   font-size: 28px;
+}
+
+.chatheader{
+  display: flex;
+  width: 100svh;
+  justify-Content: space-between;
+  border-bottom: 2px #a0a0a0 solid;
+  padding: 20px;
+}
+
+.chatheader p{
+  padding: 5px 20px;
+}
+
+.chatbox{
+  justify-content: right;
+  text-align: right;
+  width: 100svh;
+  height: 65vh;
+  border-radius: 20px;
+  border: 2px #858585 solid;
+  margin: 10px 0;
+  padding: 20px;
+}
+
+.message{
+  background-color: rgb(244, 206, 20);
+  border-radius: 20px;
+  margin: 0 10px;
+  padding: 10px;
 }
 
   switch-button {
@@ -222,7 +261,25 @@ body{
     background-color: #5a6268;
   }
 
-  
+  @keyframes SlideFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes SlideFromRight {
+    0% {
+      transform: translateX(100%);
+    }
+    
+    100% {
+      transform: translateX(0);
+    }
+  }
 
 
 
